# keeper_training

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.rst  docker-compose.local.yml  docker-compose.production.yml  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .postgres
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  make.bat
docs/_source/: howto.rst  index.rst  users.rst
docs/_source/pycharm/: configuration.rst
keeper_training/: conftest.py
keeper_training/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_alter_site_options.py
keeper_training/drills/: admin.py  apps.py  models.py  urls.py  views.py
keeper_training/drills/migrations/: 0001_initial.py  0002_auto_20210418_2237.py  0002_drill_image.py
keeper_training/drills/tests/: factories.py  test_models.py  test_urls.py
keeper_training/templates/: 403.html  404.html  500.html  _navbar.html  base.html
keeper_training/templates/account/: login.html  signup.html
keeper_training/templates/drills/: _drill.html  _drill_small.html  _drill_static.html  drill_detail.html  drill_form.html  drill_list.html
keeper_training/templates/pages/: home.html
keeper_training/templates/training_sessions/: _drill.html  trainingsession_detail.html  trainingsession_form.html  trainingsession_list.html
keeper_training/templates/users/: user_detail.html  user_form.html
keeper_training/training_sessions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
keeper_training/training_sessions/migrations/: 0001_initial.py  0002_auto_20201228_1211.py  0003_auto_20210401_2217.py
keeper_training/training_sessions/tests/: factories.py  test_models.py  test_urls.py  test_views.py
keeper_training/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
keeper_training/users/api/: serializers.py  views.py
keeper_training/users/migrations/: 0002_alter_user_first_name.py
keeper_training/users/tests/: factories.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
requirements/: base.txt  local.txt
